syntax = "proto3";

package audio;

option go_package = "pkg/pb/audio";

service AudioService {
rpc TranscribeAudio(TranscribeRequest) returns (TranscribeResponse) {}
}

enum AudioFormat {
  AUDIO_FORMAT_UNSPECIFIED = 0;
  AUDIO_FORMAT_WAV = 1;
  AUDIO_FORMAT_MP3 = 2;
  AUDIO_FORMAT_FLAC = 3;
  AUDIO_FORMAT_OGG = 4;
}

message TranscribeRequest {
    bytes audio_data = 1;
    AudioFormat audio_format = 2;
}

message TranscribeResponse {
    string transcript =1;
    string error =2;
}